# PDF_Studio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release-windows.yml
docs/: 产品介绍.md  发布检查清单-v0.2.0.md
packaging/windows/: PDFStudio.iss  PageCase.iss  ProjectO.iss  third-party-LICENSES.txt
qml/: Main.qml
qml/components/: AboutDialog.qml  ActionBar.qml  AppHeader.qml  AppLogo.qml  ChangelogDialog.qml  CompactComboBox.qml  CompressComboBox.qml  ConvertComboBox.qml  DesensitizeActionBar.qml  DragGrip.qml  FeatureTabs.qml  FileDropZone.qml  FileKindIcon.qml  FileListView.qml  FilePickerDialog.qml  FilePickerIconButton.qml  GlobalProgressBar.qml  IconDeleteButton.qml  LucideIcon.qml  MenuOption.qml  PathBreadcrumbBar.qml  PickerFilterCombo.qml  RedactionOverlay.qml  RotateComboBox.qml  ScrollPreview.qml  SettingsDropdown.qml  ShadowCard.qml  StatusToast.qml  StyledButton.qml  StyledCheckBox.qml  StyledComboBox.qml  SwitchToggle.qml  ThemeToggleButton.qml  UpdateStatusIcon.qml  WatermarkColorPicker.qml  WatermarkCountCombo.qml  WatermarkInputField.qml
qml/pages/: CompressPage.qml  ConvertPage.qml  MergePage.qml  PageBase.qml  RotatePage.qml  SplitPage.qml  WatermarkPage.qml  WorkspacePage.qml
qml/style/: Theme.qml
resources/: changelog.json  update.json
scripts/: build-release.bat  deploy.bat  env.bat  package-installer.bat  package-portable.bat  publish-dual.bat  publish-dual.ps1  release.bat
src/: appcontroller.cpp  appcontroller.h  appsettings.cpp  appsettings.h  desensitizeengine.cpp  desensitizeengine.h  filelistmodel.cpp  filelistmodel.h  filepicker.cpp  filepicker.h  main.cpp  mosaicengine.cpp  mosaicengine.h  officeconverter.cpp  officeconverter.h  pdfengine.cpp  pdfengine.h  pdfpagerenderer.cpp  pdfpreviewmodel.cpp  pdfpreviewmodel.h  piidetector.cpp  piidetector.h  redactionregionmodel.cpp  redactionregionmodel.h  updatechecker.cpp  updatechecker.h
